Update AuthenticationConfig.java